@@ -17,6 +17,7 @@ CHANGELOG Roundcube Webmail
 - Fix reply scrolling issue with text mode and start message below the quote (#1490114)
 - Fix possible issues in skin/skin_path config handling (#1490125)
 - Fix lack of delimiter for recipient addresses in smtp_log (#1490150)
+- Fix generation of Blowfish-based password hashes (#1490184)
 
 RELEASE 1.0.3
 -------------
